// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="sc-gKsewC frmcMa"
>
  <div
    className="sc-jSgupP qOMri"
  >
    <div
      className="sc-eCssSg dWxixI"
    >
      <div
        className="sc-dlfnbm gNktJP"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="sc-eCssSg iGACab"
    >
      <div
        className="sc-dlfnbm gNktJP"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="sc-iBPRYJ eJtVkw"
  >
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        1
      </div>
    </div>
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        2
      </div>
    </div>
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        3
      </div>
    </div>
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        4
      </div>
    </div>
  </div>
  <div
    className="sc-fubCfw dXXCLg"
  >
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        1
      </div>
    </div>
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        2
      </div>
    </div>
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        3
      </div>
    </div>
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        4
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly with no items 1`] = `
<div
  className="sc-gKsewC frmcMa"
>
  <div
    className="sc-jSgupP qOMri"
  >
    <div
      className="sc-eCssSg dWxixI"
    >
      <div
        className="sc-dlfnbm gNktJP"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="sc-eCssSg iGACab"
    >
      <div
        className="sc-dlfnbm gNktJP"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="sc-iBPRYJ eJtVkw"
  >
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        1
      </div>
    </div>
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        2
      </div>
    </div>
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        3
      </div>
    </div>
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        4
      </div>
    </div>
  </div>
  <div
    className="sc-fubCfw dXXCLg"
  >
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        1
      </div>
    </div>
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        2
      </div>
    </div>
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        3
      </div>
    </div>
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        4
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with data 1`] = `
<div
  className="sc-gKsewC frmcMa"
>
  <div
    className="sc-jSgupP qOMri"
  >
    <div
      className="sc-eCssSg dWxixI"
    >
      <div
        className="sc-dlfnbm gNktJP"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      className="sc-eCssSg iGACab"
    >
      <div
        className="sc-dlfnbm gNktJP"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="sc-iBPRYJ eJtVkw"
  >
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        1
      </div>
    </div>
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        2
      </div>
    </div>
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        3
      </div>
    </div>
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        4
      </div>
    </div>
  </div>
  <div
    className="sc-fubCfw dXXCLg"
  >
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        1
      </div>
    </div>
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        2
      </div>
    </div>
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        3
      </div>
    </div>
    <div
      className="sc-bdfBwQ ficVno"
    >
      <div
        className="sc-gsTCUz bUdwCS"
      >
        4
      </div>
    </div>
  </div>
</div>
`;
